Use digits for numerals.

--- a/tex/p079.tex
+++ b/tex/p079.tex
@@ -37,7 +37,7 @@
 \vs p079 4:5 In India many types of social organizations flourished from time to time, from the semidemocratic systems of the Aryans to despotic and monarchial forms of government. But the most characteristic feature of society was the persistence of the great social castes that were instituted by the Aryans in an effort to perpetuate racial identity. This elaborate caste system has been preserved on down to the present time.
 \vs p079 4:6 Of the four great castes, all but the first were established in the futile effort to prevent racial amalgamation of the Aryan conquerors with their inferior subjects. But the premier caste, the teacher\hyp{}priests, stems from the Sethites; the Brahmans of the XX century after Christ are the lineal cultural descendants of the priests of the second garden, albeit their teachings differ greatly from those of their illustrious predecessors.
 \vs p079 4:7 When the Aryans entered India, they brought with them their concepts of Deity as they had been preserved in the lingering traditions of the religion of the second garden. But the Brahman priests were never able to withstand the pagan momentum built up by the sudden contact with the inferior religions of the Deccan after the racial obliteration of the Aryans. Thus the vast majority of the population fell into the bondage of the enslaving superstitions of inferior religions; and so it was that India failed to produce the high civilization which had been foreshadowed in earlier times.
-\vs p079 4:8 The spiritual awakening of the sixth century before Christ did not persist in India, having died out even before the Mohammedan invasion. But someday a greater Gautama may arise to lead all India in the search for the living God, and then the world will observe the fruition of the cultural potentialities of a versatile people so long comatose under the benumbing influence of an unprogressing spiritual vision.
+\vs p079 4:8 The spiritual awakening of the VI century before Christ did not persist in India, having died out even before the Mohammedan invasion. But someday a greater Gautama may arise to lead all India in the search for the living God, and then the world will observe the fruition of the cultural potentialities of a versatile people so long comatose under the benumbing influence of an unprogressing spiritual vision.
 \vs p079 4:9 Culture does rest on a biologic foundation, but caste alone could not perpetuate the Aryan culture, for religion, true religion, is the indispensable source of that higher energy which drives men to establish a superior civilization based on human brotherhood.
 \usection{5.\bibnobreakspace Red Man and Yellow Man}
 \vs p079 5:1 While the story of India is that of Andite conquest and eventual submergence in the older evolutionary peoples, the narrative of eastern Asia is more properly that of the primary Sangiks, particularly the red man and the yellow man. These two races largely escaped that admixture with the debased Neanderthal strain which so greatly retarded the blue man in Europe, thus preserving the superior potential of the primary Sangik type.
@@ -85,7 +85,7 @@
 \vs p079 8:12 \ublistelem{2.}\bibnobreakspace Pooling of the experience of more than one generation.
 \vs p079 8:13 \ublistelem{3.}\bibnobreakspace Efficient education of children in the arts and sciences of the past.
 \vs p079 8:14 \ublistelem{4.}\bibnobreakspace Development of a strong sense of duty, the enhancement of morality, and the augmentation of ethical sensitivity.
-\vs p079 8:15 \pc The formative period of Chinese civilization, opening with the coming of the Andites, continues on down to the great ethical, moral, and semireligious awakening of the sixth century before Christ. And Chinese tradition preserves the hazy record of the evolutionary past; the transition from mother\hyp{} to father\hyp{}family, the establishment of agriculture, the development of architecture, the initiation of industry --- all these are successively narrated. And this story presents, with greater accuracy than any other similar account, the picture of the magnificent ascent of a superior people from the levels of barbarism. During this time they passed from a primitive agricultural society to a higher social organization embracing cities, manufacture, metalworking, commercial exchange, government, writing, mathematics, art, science, and printing.
+\vs p079 8:15 \pc The formative period of Chinese civilization, opening with the coming of the Andites, continues on down to the great ethical, moral, and semireligious awakening of the VI century before Christ. And Chinese tradition preserves the hazy record of the evolutionary past; the transition from mother\hyp{} to father\hyp{}family, the establishment of agriculture, the development of architecture, the initiation of industry --- all these are successively narrated. And this story presents, with greater accuracy than any other similar account, the picture of the magnificent ascent of a superior people from the levels of barbarism. During this time they passed from a primitive agricultural society to a higher social organization embracing cities, manufacture, metalworking, commercial exchange, government, writing, mathematics, art, science, and printing.
 \vs p079 8:16 And so the ancient civilization of the yellow race has persisted down through the centuries. It is almost 40,000 years since the first important advances were made in Chinese culture, and though there have been many retrogressions, the civilization of the sons of Han comes the nearest of all to presenting an unbroken picture of continual progression right on down to the times of the XX century. The mechanical and religious developments of the white races have been of a high order, but they have never excelled the Chinese in family loyalty, group ethics, or personal morality.
 \vs p079 8:17 This ancient culture has contributed much to human happiness; millions of human beings have lived and died, blessed by its achievements. For centuries this great civilization has rested upon the laurels of the past, but it is even now reawakening to envision anew the transcendent goals of mortal existence, once again to take up the unremitting struggle for never\hyp{}ending progress.
 \vsetoff
