--- a/tex/p094.tex
+++ b/tex/p094.tex
@@ -48,7 +48,7 @@
 \vs p094 5:7 In China all of these beliefs were later confused and compounded with the ever\hyp{}growing cult of ancestor worship. But never since the time of Singlangton have the Chinese fallen into helpless slavery to priestcraft. The yellow race was the first to emerge from barbaric bondage into orderly civilization because it was the first to achieve some measure of freedom from the abject fear of the gods, not even fearing the ghosts of the dead as other races feared them. China met her defeat because she failed to progress beyond her early emancipation from priests; she fell into an almost equally calamitous error, the worship of ancestors.
 \vs p094 5:8 \pc But the Salemites did not labour in vain. It was upon the foundations of their gospel that the great philosophers of sixth\hyp{}century China built their teachings. The moral atmosphere and the spiritual sentiments of the times of Lao\hyp{}tse and Confucius grew up out of the teachings of the Salem missionaries of an earlier age.
 \usection{6.\bibnobreakspace Lao\hyp{}Tse and Confucius}
-\vs p094 6:1 About 600 years before the arrival of Michael, it seemed to Melchizedek, long since departed from the flesh, that the purity of his teaching on earth was being unduly jeopardized by general absorption into the older Urantia beliefs. It appeared for a time that his mission as a forerunner of Michael might be in danger of failing. And in the sixth century before Christ, through an unusual co\hyp{}ordination of spiritual agencies, not all of which are understood even by the planetary supervisors, Urantia witnessed a most unusual presentation of manifold religious truth. Through the agency of several human teachers the Salem gospel was restated and revitalized, and as it was then presented, much has persisted to the times of this writing.
+\vs p094 6:1 About 600 years before the arrival of Michael, it seemed to Melchizedek, long since departed from the flesh, that the purity of his teaching on earth was being unduly jeopardized by general absorption into the older Urantia beliefs. It appeared for a time that his mission as a forerunner of Michael might be in danger of failing. And in the VI century before Christ, through an unusual co\hyp{}ordination of spiritual agencies, not all of which are understood even by the planetary supervisors, Urantia witnessed a most unusual presentation of manifold religious truth. Through the agency of several human teachers the Salem gospel was restated and revitalized, and as it was then presented, much has persisted to the times of this writing.
 \vs p094 6:2 This unique century of spiritual progress was characterized by great religious, moral, and philosophic teachers all over the civilized world. In China, the two outstanding teachers were Lao\hyp{}tse and Confucius.
 \vs p094 6:3 \pc \bibemph{Lao\hyp{}tse} built directly upon the concepts of the Salem traditions when he declared Tao to be the One First Cause of all creation. Lao was a man of great spiritual vision. He taught that man’s eternal destiny was “everlasting union with Tao, Supreme God and Universal King.” His comprehension of ultimate causation was most discerning, for he wrote: “Unity arises out of the Absolute Tao, and from Unity there appears cosmic Duality, and from such Duality, Trinity springs forth into existence, and Trinity is the primal source of all reality.” “All reality is ever in balance between the potentials and the actuals of the cosmos, and these are eternally harmonized by the spirit of divinity.”
 \vs p094 6:4 Lao\hyp{}tse also made one of the earliest presentations of the doctrine of returning good for evil: “Goodness begets goodness, but to the one who is truly good, evil also begets goodness.”
@@ -61,7 +61,7 @@
 \vs p094 6:11 The teachings of Lao have been lost to all but a few in the Orient, but the writings of Confucius have ever since constituted the basis of the moral fabric of the culture of almost a third of Urantians. These Confucian precepts, while perpetuating the best of the past, were somewhat inimical to the very Chinese spirit of investigation that had produced those achievements which were so venerated. The influence of these doctrines was unsuccessfully combated both by the imperial efforts of Ch’in Shih Huang Ti and by the teachings of Mo Ti, who proclaimed a brotherhood founded not on ethical duty but on the love of God. He sought to rekindle the ancient quest for new truth, but his teachings failed before the vigorous opposition of the disciples of Confucius.
 \vs p094 6:12 Like many other spiritual and moral teachers, both Confucius and Lao\hyp{}tse were eventually deified by their followers in those spiritually dark ages of China which intervened between the decline and perversion of the Taoist faith and the coming of the Buddhist missionaries from India. During these spiritually decadent centuries the religion of the yellow race degenerated into a pitiful theology wherein swarmed devils, dragons, and evil spirits, all betokening the returning fears of the unenlightened mortal mind. And China, once at the head of human society because of an advanced religion, then fell behind because of temporary failure to progress in the true path of the development of that God\hyp{}consciousness which is indispensable to the true progress, not only of the individual mortal, but also of the intricate and complex civilizations which characterize the advance of culture and society on an evolutionary planet of time and space.
 \usection{7.\bibnobreakspace Gautama Siddhartha}
-\vs p094 7:1 Contemporary with Lao\hyp{}tse and Confucius in China, another great teacher of truth arose in India. Gautama Siddhartha was born in the sixth century before Christ in the north Indian province of Nepal. His followers later made it appear that he was the son of a fabulously wealthy ruler, but, in truth, he was the heir apparent to the throne of a petty chieftain who ruled by sufferance over a small and secluded mountain valley in the southern Himalayas.
+\vs p094 7:1 Contemporary with Lao\hyp{}tse and Confucius in China, another great teacher of truth arose in India. Gautama Siddhartha was born in the VI century before Christ in the north Indian province of Nepal. His followers later made it appear that he was the son of a fabulously wealthy ruler, but, in truth, he was the heir apparent to the throne of a petty chieftain who ruled by sufferance over a small and secluded mountain valley in the southern Himalayas.
 \vs p094 7:2 Gautama formulated those theories which grew into the philosophy of Buddhism after six years of the futile practice of Yoga. Siddhartha made a determined but unavailing fight against the growing caste system. There was a lofty sincerity and a unique unselfishness about this young prophet prince that greatly appealed to the men of those days. He detracted from the practice of seeking individual salvation through physical affliction and personal pain. And he exhorted his followers to carry his gospel to all the world.
 \vs p094 7:3 Amid the confusion and extreme cult practices of India, the saner and more moderate teachings of Gautama came as a refreshing relief. He denounced gods, priests, and their sacrifices, but he too failed to perceive the \bibemph{personality} of the One Universal. Not believing in the existence of individual human souls, Gautama, of course, made a valiant fight against the time\hyp{}honoured belief in transmigration of the soul. He made a noble effort to deliver men from fear, to make them feel at ease and at home in the great universe, but he failed to show them the pathway to that real and supernal home of ascending mortals --- Paradise --- and to the expanding service of eternal existence.
 \vs p094 7:4 Gautama was a real prophet, and had he heeded the instruction of the hermit Godad, he might have aroused all India by the inspiration of the revival of the Salem gospel of salvation by faith. Godad was descended through a family that had never lost the traditions of the Melchizedek missionaries.
