--- a/tex/p095.tex
+++ b/tex/p095.tex
@@ -61,7 +61,7 @@
 \vs p095 6:6 The Jewish traditions of heaven and hell and the doctrine of devils as recorded in the Hebrew scriptures, while founded on the lingering traditions of Lucifer and Caligastia, were principally derived from the Zoroastrians during the times when the Jews were under the political and cultural dominance of the Persians. Zoroaster, like the Egyptians, taught the “day of judgment,” but he connected this event with the end of the world.
 \vs p095 6:7 Even the religion which succeeded Zoroastrianism in Persia was markedly influenced by it. When the Iranian priests sought to overthrow the teachings of Zoroaster, they resurrected the ancient worship of Mithra. And Mithraism spread throughout the Levant and Mediterranean regions, being for some time a contemporary of both Judaism and Christianity. The teachings of Zoroaster thus came successively to impress three great religions: Judaism and Christianity and, through them, Mohammedanism.
 \vs p095 6:8 \pc But it is a far cry from the exalted teachings and noble psalms of Zoroaster to the modern perversions of his gospel by the Parsees with their great fear of the dead, coupled with the entertainment of beliefs in sophistries which Zoroaster never stooped to countenance.
-\vs p095 6:9 This great man was one of that unique group that sprang up in the sixth century before Christ to keep the light of Salem from being fully and finally extinguished as it so dimly burned to show man in his darkened world the path of light leading to everlasting life.
+\vs p095 6:9 This great man was one of that unique group that sprang up in the VI century before Christ to keep the light of Salem from being fully and finally extinguished as it so dimly burned to show man in his darkened world the path of light leading to everlasting life.
 \usection{7.\bibnobreakspace The Salem Teachings in Arabia}
 \vs p095 7:1 The Melchizedek teachings of the one God became established in the Arabian Desert at a comparatively recent date. As in Greece, so in Arabia the Salem missionaries failed because of their misunderstanding of Machiventa’s instructions regarding over\hyp{}organization. But they were not thus hindered by their interpretation of his admonition against all efforts to extend the gospel through military force or civil compulsion.
 \vs p095 7:2 Not even in China or Rome did the Melchizedek teachings fail more completely than in this desert region so very near Salem itself. Long after the majority of the peoples of the Orient and Occident had become respectively Buddhist and Christian, the desert of Arabia continued as it had for thousands of years. Each tribe worshipped its olden fetish, and many individual families had their own household gods. Long the struggle continued between Babylonian Ishtar, Hebrew Yahweh, Iranian Ahura, and Christian Father of the Lord Jesus Christ. Never was one concept able fully to displace the others.
