--- a/tex/p097.tex
+++ b/tex/p097.tex
@@ -14,7 +14,7 @@
 \vs p097 1:9 \pc And this gradual development of the concept of the character of Yahweh continued under the ministry of Samuel’s successors. They attempted to present Yahweh as a covenant\hyp{}keeping God but hardly maintained the pace set by Samuel; they failed to develop the idea of the mercy of God as Samuel had later conceived it. There was a steady drift back toward the recognition of other gods, despite the maintenance that Yahweh was above all. “Yours is the kingdom, O Lord, and you are exalted as head above all.”
 \vs p097 1:10 The keynote of this era was divine power; the prophets of this age preached a religion designed to foster the king upon the Hebrew throne. “Yours, O Lord, is the greatness and the power and the glory and the victory and the majesty. In your hand is power and might, and you are able to make great and to give strength to all.” And this was the status of the God concept during the time of Samuel and his immediate successors.
 \usection{2.\bibnobreakspace Elijah and Elisha}
-\vs p097 2:1 In the tenth century before Christ the Hebrew nation became divided into two kingdoms. In both of these political divisions many truth teachers endeavoured to stem the reactionary tide of spiritual decadence that had set in, and which continued disastrously after the war of separation. But these efforts to advance the Hebraic religion did not prosper until that determined and fearless warrior for righteousness, Elijah, began his teaching. Elijah restored to the northern kingdom a concept of God comparable with that held in the days of Samuel. Elijah had little opportunity to present an advanced concept of God; he was kept busy, as Samuel had been before him, overthrowing the altars of Baal and demolishing the idols of false gods. And he carried forward his reforms in the face of the opposition of an idolatrous monarch; his task was even more gigantic and difficult than that which Samuel had faced.
+\vs p097 2:1 In the X century before Christ the Hebrew nation became divided into two kingdoms. In both of these political divisions many truth teachers endeavoured to stem the reactionary tide of spiritual decadence that had set in, and which continued disastrously after the war of separation. But these efforts to advance the Hebraic religion did not prosper until that determined and fearless warrior for righteousness, Elijah, began his teaching. Elijah restored to the northern kingdom a concept of God comparable with that held in the days of Samuel. Elijah had little opportunity to present an advanced concept of God; he was kept busy, as Samuel had been before him, overthrowing the altars of Baal and demolishing the idols of false gods. And he carried forward his reforms in the face of the opposition of an idolatrous monarch; his task was even more gigantic and difficult than that which Samuel had faced.
 \vs p097 2:2 When Elijah was called away, Elisha, his faithful associate, took up his work and, with the invaluable assistance of the little\hyp{}known Micaiah, kept the light of truth alive in Palestine.
 \vs p097 2:3 But these were not times of progress in the concept of Deity. Not yet had the Hebrews ascended even to the Mosaic ideal. The era of Elijah and Elisha closed with the better classes returning to the worship of the supreme Yahweh and witnessed the restoration of the idea of the Universal Creator to about that place where Samuel had left it.
 \usection{3.\bibnobreakspace Yahweh and Baal}
