--- a/tex/p098.tex
+++ b/tex/p098.tex
@@ -13,7 +13,7 @@
 \vs p098 1:6 The Olympian gods illustrate man’s typical anthropomorphism. But the Greek mythology was more aesthetic than ethic. The Greek religion was helpful in that it portrayed a universe governed by a deity group. But Greek morals, ethics, and philosophy presently advanced far beyond the god concept, and this imbalance between intellectual and spiritual growth was as hazardous to Greece as it had proved to be in India.
 \usection{2.\bibnobreakspace Greek Philosophic Thought}
 \vs p098 2:1 A lightly regarded and superficial religion cannot endure, especially when it has no priesthood to foster its forms and to fill the hearts of the devotees with fear and awe. The Olympian religion did not promise salvation, nor did it quench the spiritual thirst of its believers; therefore was it doomed to perish. Within a millennium of its inception it had nearly vanished, and the Greeks were without a national religion, the gods of Olympus having lost their hold upon the better minds.
-\vs p098 2:2 This was the situation when, during the sixth century before Christ, the Orient and the Levant experienced a revival of spiritual consciousness and a new awakening to the recognition of monotheism. But the West did not share in this new development; neither Europe nor northern Africa extensively participated in this religious renaissance. The Greeks, however, did engage in a magnificent intellectual advancement. They had begun to master fear and no longer sought religion as an antidote therefor, but they did not perceive that true religion is the cure for soul hunger, spiritual disquiet, and moral despair. They sought for the solace of the soul in deep thinking --- philosophy and metaphysics. They turned from the contemplation of self\hyp{}preservation --- salvation --- to self\hyp{}realization and self\hyp{}understanding.
+\vs p098 2:2 This was the situation when, during the VI century before Christ, the Orient and the Levant experienced a revival of spiritual consciousness and a new awakening to the recognition of monotheism. But the West did not share in this new development; neither Europe nor northern Africa extensively participated in this religious renaissance. The Greeks, however, did engage in a magnificent intellectual advancement. They had begun to master fear and no longer sought religion as an antidote therefor, but they did not perceive that true religion is the cure for soul hunger, spiritual disquiet, and moral despair. They sought for the solace of the soul in deep thinking --- philosophy and metaphysics. They turned from the contemplation of self\hyp{}preservation --- salvation --- to self\hyp{}realization and self\hyp{}understanding.
 \vs p098 2:3 By rigorous thought the Greeks attempted to attain that consciousness of security which would serve as a substitute for the belief in survival, but they utterly failed. Only the more intelligent among the higher classes of the Hellenic peoples could grasp this new teaching; the rank and file of the progeny of the slaves of former generations had no capacity for the reception of this new substitute for religion.
 \vs p098 2:4 \pc The philosophers disdained all forms of worship, notwithstanding that they practically all held loosely to the background of a belief in the Salem doctrine of “the Intelligence of the universe,” “the idea of God,” and “the Great Source.” In so far as the Greek philosophers gave recognition to the divine and the superfinite, they were frankly monotheistic; they gave scant recognition to the whole galaxy of Olympian gods and goddesses.
 \vs p098 2:5 The Greek poets of the fifth and sixth centuries, notably Pindar, attempted the reformation of Greek religion. They elevated its ideals, but they were more artists than religionists. They failed to develop a technique for fostering and conserving supreme values.
@@ -26,7 +26,7 @@
 \vs p098 2:12 \pc Religions have long endured without philosophical support, but few philosophies, as such, have long persisted without some identification with religion. Philosophy is to religion as conception is to action. But the ideal human estate is that in which philosophy, religion, and science are welded into a meaningful unity by the conjoined action of wisdom, faith, and experience.
 \usection{3.\bibnobreakspace The Melchizedek Teachings in Rome}
 \vs p098 3:1 Having grown out of the earlier religious forms of worship of the family gods into the tribal reverence for Mars, the god of war, it was natural that the later religion of the Latins was more of a political observance than were the intellectual systems of the Greeks and Brahmans or the more spiritual religions of several other peoples.
-\vs p098 3:2 In the great monotheistic renaissance of Melchizedek’s gospel during the sixth century before Christ, too few of the Salem missionaries penetrated Italy, and those who did were unable to overcome the influence of the rapidly spreading Etruscan priesthood with its new galaxy of gods and temples, all of which became organized into the Roman state religion. This religion of the Latin tribes was not trivial and venal like that of the Greeks, neither was it austere and tyrannical like that of the Hebrews; it consisted for the most part in the observance of mere forms, vows, and taboos.
+\vs p098 3:2 In the great monotheistic renaissance of Melchizedek’s gospel during the VI century before Christ, too few of the Salem missionaries penetrated Italy, and those who did were unable to overcome the influence of the rapidly spreading Etruscan priesthood with its new galaxy of gods and temples, all of which became organized into the Roman state religion. This religion of the Latin tribes was not trivial and venal like that of the Greeks, neither was it austere and tyrannical like that of the Hebrews; it consisted for the most part in the observance of mere forms, vows, and taboos.
 \vs p098 3:3 Roman religion was greatly influenced by extensive cultural importations from Greece. Eventually most of the Olympian gods were transplanted and incorporated into the Latin pantheon. The Greeks long worshipped the fire of the family hearth --- Hestia was the virgin goddess of the hearth; Vesta was the Roman goddess of the home. Zeus became Jupiter; Aphrodite, Venus; and so on down through the many Olympian deities.
 \vs p098 3:4 The religious initiation of Roman youths was the occasion of their solemn consecration to the service of the state. Oaths and admissions to citizenship were in reality religious ceremonies. The Latin peoples maintained temples, altars, and shrines and, in a crisis, would consult the oracles. They preserved the bones of heroes and later on those of the Christian saints.
 \vs p098 3:5 This formal and unemotional form of pseudoreligious patriotism was doomed to collapse, even as the highly intellectual and artistic worship of the Greeks had gone down before the fervid and deeply emotional worship of the mystery cults. The greatest of these devastating cults was the mystery religion of the Mother of God sect, which had its headquarters, in those days, on the exact site of the present church of St. Peter’s in Rome.
