--- a/tex/p130.tex
+++ b/tex/p130.tex
@@ -1,6 +1,6 @@
 \upaper{130}{On the Way to Rome}
 \author{Midwayer Commission}
-\vs p130 0:1 The tour of the Roman world consumed most of the 28\ts{th} and the entire 29\ts{th} year of Jesus’ life on earth. Jesus and the two natives from India --- Gonod and his son Ganid --- left Jerusalem on a Sunday morning, April 26, A.D.\,22. They made their journey according to schedule, and Jesus said good\hyp{}bye to the father and son in the city of Charax on the Persian Gulf on the tenth day of December the following year, A.D.\,23.
+\vs p130 0:1 The tour of the Roman world consumed most of the 28\ts{th} and the entire 29\ts{th} year of Jesus’ life on earth. Jesus and the two natives from India --- Gonod and his son Ganid --- left Jerusalem on a Sunday morning, April 26, A.D.\,22. They made their journey according to schedule, and Jesus said good\hyp{}bye to the father and son in the city of Charax on the Persian Gulf on the 10\ts{th} day of December the following year, A.D.\,23.
 \vs p130 0:2 \pc From Jerusalem they went to Caesarea by way of Joppa. At Caesarea they took a boat for Alexandria. From Alexandria they sailed for Lasea in Crete. From Crete they sailed for Carthage, touching at Cyrene. At Carthage they took a boat for Naples, stopping at Malta, Syracuse, and Messina. From Naples they went to Capua, whence they travelled by the Appian Way to Rome.
 \vs p130 0:3 After their stay in Rome they went overland to Tarentum, where they set sail for Athens in Greece, stopping at Nicopolis and Corinth. From Athens they went to Ephesus by way of Troas. From Ephesus they sailed for Cyprus, putting in at Rhodes on the way. They spent considerable time visiting and resting on Cyprus and then sailed for Antioch in Syria. From Antioch they journeyed south to Sidon and then went over to Damascus. From there they travelled by caravan to Mesopotamia, passing through Thapsacus and Larissa. They spent some time in Babylon, visited Ur and other places, and then went to Susa. From Susa they journeyed to Charax, from which place Gonod and Ganid embarked for India.
 \vs p130 0:4 \pc It was while working four months at Damascus that Jesus had picked up the rudiments of the language spoken by Gonod and Ganid. While there he had laboured much of the time on translations from Greek into one of the languages of India, being assisted by a native of Gonod’s home district.
