Clarify the footnote about 46 vs 48 "trait determiners" in human sex cells.

--- a/tex/p036.tex
+++ b/tex/p036.tex
@@ -17,7 +17,7 @@
 \vs p036 2:8 \ublistelem{7.}\bibnobreakspace The sphere of unrevealed life.
 \vs p036 2:9 \pc Each of these primary spheres is surrounded by six satellites, on which the special phases of all the Life Carrier activities in the universe are centred.
 \vs p036 2:10 \pc \bibemph{World Number One,} the headquarters sphere, together with its 6 tributary satellites, is devoted to the study of universal life, life in all of its known phases of manifestation. Here is located the college of life planning, wherein function teachers and advisers from Uversa and Havona, even from Paradise. And I am permitted to reveal that the 7 central emplacements of the adjutant mind\hyp{}spirits are situated on this world of the Life Carriers.
-\vs p036 2:11 The number 10 --- the decimal system --- is inherent in the physical universe but not in the spiritual. The domain of life is characterized by 3, 7, and 12 or by multiples and combinations of these basic numbers. There are three primal and essentially different life plans, after the order of the three Paradise Sources and Centres, and in the universe of Nebadon these three basic forms of life are segregated on three different types of planets. There were, originally, 12 distinct and divine concepts of transmissible life. This number 12, with its subdivisions and multiples, runs throughout all basic life patterns of all 7 superuniverses. There are also 7 architectural types of life design, fundamental arrangements of the reproducing configurations of living matter. The Orvonton life patterns are configured as 12 inheritance carriers. The differing orders of will creatures are configured as 12, 24, 48, 96, 192, 384, and 768. On Urantia there are 48\fnst{\textbf{48}, These ``trait determiners'' and ``chromosomes'' are not the same thing, because the number of chromosomes in a single human sex cell is 23, not 48. There are 24 different chromosomes in human cells: 22 autosomes, the X, and the Y. Each chromosome contains a single DNA molecule, which represents 2 trait determiners. Therefore, there are really 48 ($24 \times 2$) trait determiners in sex cells, despite the fact that no single sex cell contains all 48.} units of pattern control --- trait determiners --- in the sex cells of human reproduction.
+\vs p036 2:11 The number 10 --- the decimal system --- is inherent in the physical universe but not in the spiritual. The domain of life is characterized by 3, 7, and 12 or by multiples and combinations of these basic numbers. There are three primal and essentially different life plans, after the order of the three Paradise Sources and Centres, and in the universe of Nebadon these three basic forms of life are segregated on three different types of planets. There were, originally, 12 distinct and divine concepts of transmissible life. This number 12, with its subdivisions and multiples, runs throughout all basic life patterns of all 7 superuniverses. There are also 7 architectural types of life design, fundamental arrangements of the reproducing configurations of living matter. The Orvonton life patterns are configured as 12 inheritance carriers. The differing orders of will creatures are configured as 12, 24, 48, 96, 192, 384, and 768. On Urantia there are 48\fnst{\textbf{48}, These ``trait determiners'' and ``chromosomes'' are not the same thing, because the number of chromosomes in a single human sex cell is 23, not 48. There are 24 different chromosomes in human cells: 22 autosomes, the X, and the Y. Each chromosome contains a single DNA molecule, which contains two gene strands and thus represents two trait determiners. Therefore, there are really 48 (24$\times$2) trait determiners in sex cells, despite the fact that no single sex cell contains all 48. It is curious to note that the accepted number of chromosomes for humans at the time of revelation (1935) was 48, but the role of DNA in trait determination was as yet unknown. The authors of this revelation were able to present us with information which was consistent with the accepted scientific truth of the day in which it appeared and also remained consistent in the light of new discoveries.} units of pattern control --- trait determiners --- in the sex cells of human reproduction.
 \vs p036 2:12 \pc \bibemph{The Second World} is the life\hyp{}designing sphere; here all new modes of life organization are worked out. While the original life designs are provided by the Creator Son, the actual outworking of these plans is entrusted to the Life Carriers and their associates. When the general life plans for a new world have been formulated, they are transmitted to the headquarters sphere, where they are minutely scrutinized by the supreme council of the senior Life Carriers in collaboration with a corps of consulting Melchizedeks. If the plans are a departure from previously accepted formulas, they must be passed upon, and endorsed by, the Creator Son. The chief of Melchizedeks often represents the Creator Son in these deliberations.
 \vs p036 2:13 Planetary life, therefore, while similar in some respects, differs in many ways on each evolutionary world. Even in a uniform life series in a single family of worlds, life is not exactly the same on any two planets; there is always a planetary type, for the Life Carriers work constantly in an effort to improve the vital formulas committed to their keeping.
 \vs p036 2:14 There are over 1,000,000 fundamental or cosmic chemical formulas which constitute the parent patterns and the numerous basic functional variations of life manifestations. Satellite number one of the life\hyp{}planning sphere is the realm of the universe physicists and electrochemists who serve as technical assistants to the Life Carriers in the work of capturing, organizing, and manipulating the essential units of energy which are employed in building up the material vehicles of life transmission, the so\hyp{}called germ plasm.
